--- a/my-dev-portal-api/.gitignore
+++ b/my-dev-portal-api/.gitignore
@@ -2,6 +2,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/node,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,visualstudiocode
 
+#.env
+.env
+
 ### Node ###
 # Logs
 logs
