--- a/my-dev-portal/.env.template
+++ b/my-dev-portal/.env.template
@@ -3,4 +3,6 @@ REACT_APP_STRIPE_PUBLISHABLE_KEY="pk_test_123abc"
 REACT_APP_STRIPE_AUTH_KEY='Bearer sk_test_123abc'
 REACT_APP_DEV_PORTAL_API_SERVER="http://127.0.0.1:3030"
 REACT_APP_AUTH0_DOMAIN="yoururl.us.auth0.com"
-REACT_APP_AUTH0_CLIENT_ID="your Auth0 client ID"
+REACT_APP_AUTH0_CLIENT_ID="Your Auth0 Client ID"
+REACT_APP_OKTA_ORG_URL="https://yoururl.okta.com/oauth2/default"
+REACT_APP_OKTA_CLIENT_ID="Your Okta Client ID"
