--- a/my-dev-portal/.env.template
+++ b/my-dev-portal/.env.template
@@ -1,6 +1,7 @@
 REACT_APP_STRIPE_PRICING_TABLE_ID="prctbl_123abc"
 REACT_APP_STRIPE_PUBLISHABLE_KEY="pk_test_123abc"
 REACT_APP_STRIPE_AUTH_KEY='Bearer sk_test_123abc'
+REACT_APP_STRIPE_MANAGEMENT_URL="https://billing.stripe.com/p/login/test_123abc"
 REACT_APP_DEV_PORTAL_API_SERVER="http://127.0.0.1:3030"
 REACT_APP_AUTH0_DOMAIN="yoururl.us.auth0.com"
 REACT_APP_AUTH0_CLIENT_ID="your Auth0 client ID"
