{wip} trying for refresh token due to sign-up bug

--- a/my-dev-portal/.env.template
+++ b/my-dev-portal/.env.template
@@ -7,8 +7,10 @@ REACT_APP_STRIPE_MANAGEMENT_URL="https://billing.stripe.com/p/login/test_123abc"
 # API server envars
 REACT_APP_DEV_PORTAL_API_SERVER="http://127.0.0.1:3030"
 
-# Auth0 envars
+# Auth type envars
 REACT_APP_AUTH_PROVIDER="Auth0|Okta"
+
+# Auth0 envars
 REACT_APP_AUTH0_DOMAIN="yoururl.us.auth0.com"
 REACT_APP_AUTH0_CLIENT_ID="Your Auth0 Client ID"
 
