fixed broken functionality from merge for AWS
refactored envars. fixed Kong support issue after refactor

--- a/my-dev-portal-api/.env.template
+++ b/my-dev-portal-api/.env.template
@@ -25,5 +25,7 @@ OKTA_API_TOKEN="Okta API Token"
 OKTA_APPLICATION_ID="Okta App/Client Id"
 
 # Auth0 envars
-AUTH0_MANAGEMENT_API_TOKEN="Auth0 Management API Token"
 AUTH0_DOMAIN="your-domain.us.auth0.com"
+AUTH0_CLIENT_ID="auth0 client ID"
+AUTH0_CLIENT_SECRET="auth0 client secret"
+AUTH0_MANAGEMENT_API_AUDIENCE="https://your-domain.us.auth0.com/api/v2/"
