Add initial Tyk support
- Updated .env.template

--- a/my-dev-portal-api/.env.template
+++ b/my-dev-portal-api/.env.template
@@ -1,11 +1,11 @@
-STRIPE_KEY="sk_test_123abc"
+STRIPE_API_KEY="sk_test_123abc"
 MOESIF_APPLICATION_ID="your Moesif application ID"
 MOESIF_MANAGEMENT_TOKEN="your Moesif management token"
 MOESIF_TEMPLATE_WORKSPACE_ID_LIVE_EVENT_LOG="workspace ID"
 MOESIF_TEMPLATE_WORKSPACE_ID_TIME_SERIES="workspace ID"
 
 # APIM Provider
-APIM_PROVIDER="Kong|AWS"
+APIM_PROVIDER="Kong|AWS|Tyk"
 
 # AWS envars
 AWS_INVOKE_URL="https://123abc.execute-api.region.amazonaws.com"
@@ -18,6 +18,11 @@ AWS_COGNITO_USER_POOL_ID="region_poolid"
 
 # Kong envars
 KONG_URL="http://localhost:8001"
+
+# Tyk envars
+TYK_GATEWAY_URL="http://localhost:8080"
+TYK_GATEWAY_SECRET_KEY="TYK_GATEWAY_SECRET_KEY"
+TYK_DASH_ORG_ID="TYK_DASH_ORG_ID"
 
 # Okta envars
 OKTA_DOMAIN="https://you-okta-url.okta.com/"
