Readme rework, add Tyk documentation, new envars
- Needs AWS Documentation
- Added HOST and PORT envars for front end.
- HOST allows not having to navigate to 127.0.0.1 after launching frontend on localhost
- PORT will let the frontend run on a user defined port when started. By default, Tyk uses port 3000 for the dashboard which changes Stripe Pricing Table instructions. Instead of having lots of “ifs” in the documentation, I suggest we just change the default port used by the front end. I don’t see any issues this would cause in FE code.

--- a/my-dev-portal/.env.template
+++ b/my-dev-portal/.env.template
@@ -1,3 +1,7 @@
+# Portal envars
+HOST="127.0.0.1"
+PORT="4000"
+
 # Stripe envars
 REACT_APP_STRIPE_PRICING_TABLE_ID="prctbl_123abc"
 REACT_APP_STRIPE_PUBLISHABLE_KEY="pk_test_123abc"
