feat(Kong): ability to collect Konnect runtime group
Signed-off-by: Andrew J. Huffman <andrew.huffman@konghq.com>

--- a/my-dev-portal-api/.env.template
+++ b/my-dev-portal-api/.env.template
@@ -17,7 +17,14 @@ AWS_USAGE_PLAN_ID="AWS_USAGE_PLAN_ID"
 AWS_COGNITO_USER_POOL_ID="region_poolid"
 
 # Kong envars
+## Kong Enterprise Settings
 KONG_URL="http://localhost:8001"
+KONG_ADMIN_TOKEN=""
+## Kong Konnect Settings
+KONNECT_API_URL="https://us.api.konghq.com"
+KONNECT_API_VERSION="v2"
+KONNECT_RUNTIME_GROUP_NAME="default"
+KONNECT_PAT=""
 
 # Tyk envars
 TYK_GATEWAY_URL="http://localhost:8080"
