added slight tweak to v2 tag and .env

--- a/my-dev-portal-api/.env.template
+++ b/my-dev-portal-api/.env.template
@@ -3,6 +3,7 @@ MOESIF_APPLICATION_ID="your Moesif application ID"
 MOESIF_MANAGEMENT_TOKEN="your Moesif management token"
 MOESIF_TEMPLATE_WORKSPACE_ID_LIVE_EVENT_LOG="workspace ID"
 MOESIF_TEMPLATE_WORKSPACE_ID_TIME_SERIES="workspace ID"
+MOESIF_MONETIZATION_VERSION="V2"
 
 # APIM Provider
 APIM_PROVIDER="Kong|AWS|Tyk"
