update readme with right permissions needed

--- a/my-dev-portal/.env.template
+++ b/my-dev-portal/.env.template
@@ -3,9 +3,9 @@ HOST="127.0.0.1"
 PORT="4000"
 
 # Stripe envars
-REACT_APP_STRIPE_PRICING_TABLE_ID="prctbl_123abc"
+# REACT_APP_STRIPE_PRICING_TABLE_ID="prctbl_123abc"
 REACT_APP_STRIPE_PUBLISHABLE_KEY="pk_test_123abc"
-REACT_APP_STRIPE_AUTH_KEY='Bearer sk_test_123abc'
+
 REACT_APP_STRIPE_MANAGEMENT_URL="https://billing.stripe.com/p/login/test_123abc"
 
 # API server envars
