added additional payment provider env variable

--- a/my-dev-portal-api/.env.template
+++ b/my-dev-portal-api/.env.template
@@ -1,4 +1,6 @@
+APP_PAYMENT_PROVIDER=stripe
 STRIPE_API_KEY="sk_test_123abc"
+
 MOESIF_APPLICATION_ID="your Moesif application ID"
 MOESIF_MANAGEMENT_TOKEN="your Moesif management token"
 MOESIF_TEMPLATE_WORKSPACE_ID_LIVE_EVENT_LOG="workspace ID"
