fix env template

--- a/my-dev-portal-api/.env.template
+++ b/my-dev-portal-api/.env.template
@@ -34,6 +34,8 @@ TYK_GATEWAY_URL="http://localhost:8080"
 TYK_GATEWAY_SECRET_KEY="TYK_GATEWAY_SECRET_KEY"
 TYK_DASH_ORG_ID="TYK_DASH_ORG_ID"
 
+AUTH_PROVIDER="Auth0|Okta"
+
 # Okta envars
 OKTA_DOMAIN="https://you-okta-url.okta.com/"
 OKTA_API_TOKEN="Okta API Token"
