#188602922 Refactor gateway logic to use new plugin architecture
1. Refactor gateway integration code to use new plugin architecture
2. Consolidate plugin code like AWS into single dir
3. Reduce/remove copied code
4. Rewrite Auth0 AWS flow to use orgs and long lived tokens.
5. Setup install script for ease of use

TODO:
* AWS needs proper org scoped key
* Cleanup/Remove extra Auth0 Rules to support orgs
* Fix Missing validation in Portal API for prod readiness
* Test Tyk

--- a/my-dev-portal-api/.env.template
+++ b/my-dev-portal-api/.env.template
@@ -8,7 +8,7 @@ MOESIF_TEMPLATE_WORKSPACE_ID_TIME_SERIES="workspace ID"
 MOESIF_MONETIZATION_VERSION="V2"
 
 # APIM Provider
-APIM_PROVIDER="Kong|AWS|Tyk"
+APIM_PROVIDER="Kong|AWS|Tyk|Auth0-M2M"
 
 # AWS envars
 AWS_INVOKE_URL="https://123abc.execute-api.region.amazonaws.com"
@@ -19,12 +19,12 @@ AWS_USAGE_PLAN_KEY_TYPE="API_KEY"
 AWS_USAGE_PLAN_ID="AWS_USAGE_PLAN_ID"
 AWS_COGNITO_USER_POOL_ID="region_poolid"
 
-# Kong envars
-## Kong Enterprise Settings
+# Kong On-Prem envars
 KONG_URL="http://localhost:8001"
 KONG_ADMIN_TOKEN=""
-## Kong Konnect Settings
-KONNECT_API_URL="https://us.api.konghq.com"
+
+## Kong Konnect envars
+KONNECT_API_URL="https://us.api.konghq.com" # Default for US server. Change if deployed in different region such as EU: https://eu.api.konghq.com
 KONNECT_API_VERSION="v2"
 KONNECT_RUNTIME_GROUP_NAME="default"
 KONNECT_PAT=""
