--- a/plugins/auth0-m2m/resources/aws-authorizer/package.json
+++ b/plugins/auth0-m2m/resources/aws-authorizer/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "zip": "zip -r authorizer.zip . -x \"auth0/*\" \"aws-config/*\""
+    "zip": "zip -r authorizer.zip ."
   },
   "dependencies": {
     "dotenv": "^16.3.1",
