Requires paid plan from Auth0.
TODO: Needs testing.

--- a/my-dev-portal/.env.template
+++ b/my-dev-portal/.env.template
@@ -1,23 +1,35 @@
-# Portal envars
+# Frontend portal server
 HOST="127.0.0.1"
 PORT="4000"
 
-# Stripe envars
-# REACT_APP_STRIPE_PRICING_TABLE_ID="prctbl_123abc"
-REACT_APP_STRIPE_PUBLISHABLE_KEY="pk_test_123abc"
-
-REACT_APP_STRIPE_MANAGEMENT_URL="https://billing.stripe.com/p/login/test_123abc"
-
-# API server envars
+# Portal API server
 REACT_APP_DEV_PORTAL_API_SERVER="http://127.0.0.1:3030"
 
-# Auth type envars
-REACT_APP_AUTH_PROVIDER="Auth0|Okta"
+###################################
+# Identity Provider Configuration #
+###################################
+
+# Set to "Auth0" or "Okta" depending on your selected IdP
+REACT_APP_AUTH_PROVIDER="Auth0"
 
 # Auth0 envars
-REACT_APP_AUTH0_DOMAIN="yoururl.us.auth0.com"
-REACT_APP_AUTH0_CLIENT_ID="Your Auth0 Client ID"
+REACT_APP_AUTH0_DOMAIN=
+REACT_APP_AUTH0_CLIENT_ID=
 
 # Okta envars
-REACT_APP_OKTA_ORG_URL="https://yoururl.okta.com/oauth2/default"
-REACT_APP_OKTA_CLIENT_ID="Your Okta Client ID"
+REACT_APP_OKTA_ORG_URL=
+REACT_APP_OKTA_CLIENT_ID=
+
+#########################
+# Billing Configuration #
+#########################
+
+# Stripe Publishable API Key
+REACT_APP_STRIPE_PUBLISHABLE_KEY=
+
+# Strip Secret API Key
+REACT_APP_STRIPE_AUTH_KEY=
+
+# Stripe customer portal link
+# https://docs.stripe.com/customer-management/activate-no-code-customer-portal
+REACT_APP_STRIPE_MANAGEMENT_URL=
