--- a/my-dev-portal-api/.env.template
+++ b/my-dev-portal-api/.env.template
@@ -1,48 +1,63 @@
-APP_PAYMENT_PROVIDER=stripe
-STRIPE_API_KEY="sk_test_123abc"
+FRONT_END_DOMAIN=127.0.0.1:4000
 
-MOESIF_APPLICATION_ID="your Moesif application ID"
-MOESIF_MANAGEMENT_TOKEN="your Moesif management token"
-MOESIF_TEMPLATE_WORKSPACE_ID_LIVE_EVENT_LOG="workspace ID"
-MOESIF_TEMPLATE_WORKSPACE_ID_TIME_SERIES="workspace ID"
+########################
+# Moesif Configuration #
+########################
+MOESIF_APPLICATION_ID=
+MOESIF_MANAGEMENT_TOKEN=
+MOESIF_TEMPLATE_WORKSPACE_ID_LIVE_EVENT_LOG=
+MOESIF_TEMPLATE_WORKSPACE_ID_TIME_SERIES=
+
+# Only change to V1 if you're using an old version of Moesif monetization data model.
 MOESIF_MONETIZATION_VERSION="V2"
 
-# APIM Provider
-APIM_PROVIDER="Kong|AWS|Tyk|Auth0-M2M"
-
-# AWS envars
-AWS_INVOKE_URL="https://123abc.execute-api.region.amazonaws.com"
-AWS_REGION="us-east-2"
-AWS_ACCESS_KEY_ID="AWS_ACCESS_KEY_ID"
-AWS_SECRET_ACCESS_KEY="AWS_SECRET_ACCESS_KEY"
-AWS_USAGE_PLAN_KEY_TYPE="API_KEY"
-AWS_USAGE_PLAN_ID="AWS_USAGE_PLAN_ID"
-AWS_COGNITO_USER_POOL_ID="region_poolid"
-
-# Kong On-Prem envars
-KONG_URL="http://localhost:8001"
-KONG_ADMIN_TOKEN=""
-
-## Kong Konnect envars
-KONNECT_API_URL="https://us.api.konghq.com" # Default for US server. Change if deployed in different region such as EU: https://eu.api.konghq.com
-KONNECT_API_VERSION="v2"
-KONNECT_RUNTIME_GROUP_NAME="default"
-KONNECT_PAT=""
-
-# Tyk envars
-TYK_GATEWAY_URL="http://localhost:8080"
-TYK_GATEWAY_SECRET_KEY="TYK_GATEWAY_SECRET_KEY"
-TYK_DASH_ORG_ID="TYK_DASH_ORG_ID"
-
-AUTH_PROVIDER="Auth0|Okta"
-
-# Okta envars
-OKTA_DOMAIN="https://you-okta-url.okta.com/"
-OKTA_API_TOKEN="Okta API Token"
-OKTA_APPLICATION_ID="Okta App/Client Id"
+###################################
+# Identity Provider Configuration #
+###################################
 
 # Auth0 envars
-AUTH0_DOMAIN="your-domain.us.auth0.com"
-AUTH0_CLIENT_ID="auth0 client ID"
-AUTH0_CLIENT_SECRET="auth0 client secret"
-AUTH0_MANAGEMENT_API_AUDIENCE="https://your-domain.us.auth0.com/api/v2/"
+# Only needed in frontend .env file (unless configuring M2M for AWS API Gateway)
+
+# Okta envars
+OKTA_DOMAIN=
+OKTA_API_TOKEN=
+OKTA_APPLICATION_ID=
+
+#########################
+# Billing Configuration #
+#########################
+
+# Only Stripe is supported. Required for credit card check out.
+APP_PAYMENT_PROVIDER=stripe
+STRIPE_API_KEY=
+
+################################
+# API Management Configuration #
+################################
+
+# For references to localhost, you must use 127.0.0.1 due to https://github.com/node-fetch/node-fetch/issues/1624
+
+# Must be one of "Kong" "AWS" "Tyk" or "Auth0-M2M"
+APIM_PROVIDER="Kong"
+
+# Kong envars
+## Kong Enterprise Settings
+KONG_URL="http://127.0.0.1:8001"
+KONG_ADMIN_TOKEN=
+## Kong Konnect Settings
+KONNECT_API_URL="https://us.api.konghq.com"
+KONNECT_API_VERSION="v2"
+KONNECT_RUNTIME_GROUP_NAME="serverless-default"
+KONNECT_PAT=
+
+# Tyk envars
+TYK_GATEWAY_URL="http://127.0.0.1:8080"
+TYK_GATEWAY_SECRET_KEY=
+TYK_DASH_ORG_ID=
+
+# Auth0 Machine2Machine (Use for AWS API Gateway as well)
+AUTH0_M2M_DOMAIN=
+AUTH0_M2M_CLIENT_ID=
+AUTH0_M2M_CLIENT_SECRET=
+AUTH0_M2M_API_AUDIENCE="http://127.0.0.1:3030"
+AUTH0_M2M_API_SCOPE="create:client_credentials"
