#188623621 Add JWT Plugin to Developer Portal
#188623621 Add JWT Plugin to Developer Portal

--- a/my-dev-portal-api/.env.template
+++ b/my-dev-portal-api/.env.template
@@ -37,7 +37,15 @@ STRIPE_API_KEY=
 
 # For references to localhost, you must use 127.0.0.1 due to https://github.com/node-fetch/node-fetch/issues/1624
 
-# Must be one of "Kong" "AWS" "Tyk" or "Auth0-M2M"
+# Provider for generating API key to share with customer
+# Must be one of "AWS", "Kong" "Tyk", "JWT", or "Auth0-M2M" (case insensitive)
+# You can also implement your own by implementing the plugins/provisioningPlugin.js interface
+#
+# AWS: Use AWS API Gateway Lambda Authorizer with Auth0-M2M (can modify for JWT as well)
+# Kong: Use Kong with key auth plugin
+# Tyk: Use Tyk with key auth plugin
+# JWT: Generate a standard JWT using a private key. Company id/customer id added as a claim in JWT
+# Auth0-M2M: Use Auth0 Machine2Machine flows to generate an Oauth compliant client id/secret
 APIM_PROVIDER="Kong"
 
 # Kong envars
@@ -61,3 +69,10 @@ AUTH0_M2M_CLIENT_ID=
 AUTH0_M2M_CLIENT_SECRET=
 AUTH0_M2M_API_AUDIENCE="http://127.0.0.1:3030"
 AUTH0_M2M_API_SCOPE="create:client_credentials"
+
+# JWT signing using private key
+JWT_ALGORITHM=HS256
+JWT_SECRET=
+JWT_USER_ID_FIELD="sub"
+JWT_COMPANY_ID_FIELD="customer_id"
+JWT_EXPIRES_IN=
