188626037 Dockerize Dev Portal
https://www.pivotaltracker.com/story/show/188626037
* Create Dockerfiles for the frontend and backend API so easier to test
* Fix build for case-sensitive file systems

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,6 @@ npm-debug.log
 npm-debug*
 .vscode/
 .devcontainer
-my-dev-portal/.env
-my-dev-portal-api/.env
-my-dev-portal-api/.env
-my-dev-portal-authorizer/.env
 .DS_Store
 *.zip
+*.env
