--- a/plugins/kong-gateway/package.json
+++ b/plugins/kong-gateway/package.json
@@ -2,7 +2,7 @@
     "name": "dev-portal-kong-gateway-plugin",
     "version": "1.0.0",
     "description": "",
-    "main": "KongProvisioningPlugin.js",
+    "main": "kongProvisioningPlugin.js",
     "author": "",
     "license": " Apache-2.0",
     "dependencies": {
