remove okta verifier use standard verification for both

--- a/my-dev-portal-api/.env.template
+++ b/my-dev-portal-api/.env.template
@@ -15,10 +15,15 @@ MOESIF_MONETIZATION_VERSION="V2"
 # Identity Provider Configuration #
 ###################################
 
+# Set to "Auth0" or "Okta" depending on your selected IdP
+AUTH_PROVIDER="Auth0|Okta"
+# Note, we are assume you are using asymmetric key aka RS256 algorithm.
+
 # Auth0 envars
-# Only needed in frontend .env file (unless configuring M2M for AWS API Gateway)
+AUTH0_DOMAIN=
 
 # Okta envars
+OKTA_ORG_URL=
 OKTA_DOMAIN=
 OKTA_API_TOKEN=
 OKTA_APPLICATION_ID=
