add moesif-browser-js to track user actions

--- a/my-dev-portal/.env.template
+++ b/my-dev-portal/.env.template
@@ -5,6 +5,9 @@ PORT="4000"
 # Portal API server
 REACT_APP_DEV_PORTAL_API_SERVER="http://127.0.0.1:3030"
 
+# If using Moesif to track front end actions like Sign Up, Login or Checkout
+REACT_APP_MOESIF_PUBLISHABLE_APPLICATION_ID=
+
 ###################################
 # Identity Provider Configuration #
 ###################################
