Fix Auth0-M2M Flows and Cleanup Envvars for plugins
1. Prepend PLUGIN_ to all plugin related envvars while keeping backwards compatibility
2. Update README for both JWT and Auth0-M2M Flows
3. Fix Auth0-M2M flows

--- a/distribution/docker/docker-compose.yml
+++ b/distribution/docker/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - MOESIF_TEMPLATE_WORKSPACE_ID_LIVE_EVENT_LOG=
       - MOESIF_TEMPLATE_WORKSPACE_ID_TIME_SERIES=
       - STRIPE_API_KEY=
-      - APIM_PROVIDER=JWT
-      - JWT_SECRET=
-      - JWT_EXPIRES_IN=
+      - PLUGIN_APIM_PROVIDER=JWT
+      - PLUGIN_JWT_SECRET=
+      - PLUGIN_JWT_EXPIRES_IN=
 
