--- a/my-dev-portal-api/.env.template
+++ b/my-dev-portal-api/.env.template
@@ -16,7 +16,7 @@ MOESIF_MONETIZATION_VERSION="V2"
 ###################################
 
 # Set to "Auth0" or "Okta" depending on your selected IdP
-AUTH_PROVIDER="Auth0|Okta"
+AUTH_PROVIDER="Auth0"
 # Note, we are assume you are using asymmetric key aka RS256 algorithm.
 
 # Auth0 envars
@@ -43,41 +43,41 @@ STRIPE_API_KEY=
 # For references to localhost, you must use 127.0.0.1 due to https://github.com/node-fetch/node-fetch/issues/1624
 
 # Provider for generating API key to share with customer
-# Must be one of "AWS", "Kong" "Tyk", "JWT", or "Auth0-M2M" (case insensitive)
+# Must be one of "AWS" (i.e. JWT), "Kong" "Tyk", "JWT", or "Auth0-M2M" (case insensitive)
 # You can also implement your own by implementing the plugins/provisioningPlugin.js interface
 #
 # AWS: Use AWS API Gateway Lambda Authorizer with Auth0-M2M (can modify for JWT as well)
 # Kong: Use Kong with key auth plugin
 # Tyk: Use Tyk with key auth plugin
-# JWT: Generate a standard JWT using a private key. Company id/customer id added as a claim in JWT
+# JWT: Generate a standard JWT using a private key. company id/org_id added as a claim in JWT
 # Auth0-M2M: Use Auth0 Machine2Machine flows to generate an Oauth compliant client id/secret
-APIM_PROVIDER="Kong"
+PLUGIN_APIM_PROVIDER="Kong"
 
-# Kong envars
-## Kong Enterprise Settings
-KONG_URL="http://127.0.0.1:8001"
-KONG_ADMIN_TOKEN=
-## Kong Konnect Settings
-KONNECT_API_URL="https://us.api.konghq.com"
-KONNECT_API_VERSION="v2"
-KONNECT_RUNTIME_GROUP_NAME="serverless-default"
-KONNECT_PAT=
+## Kong Enterprise envvars
+PLUGIN_KONG_URL="http://127.0.0.1:8001"
+PLUGIN_KONG_ADMIN_TOKEN=
+
+## Kong Konnect envvars
+PLUGIN_KONNECT_API_URL="https://us.api.konghq.com"
+PLUGIN_KONNECT_API_VERSION="v2"
+PLUGIN_KONNECT_RUNTIME_GROUP_NAME="serverless-default"
+PLUGIN_KONNECT_PAT=
 
 # Tyk envars
-TYK_GATEWAY_URL="http://127.0.0.1:8080"
-TYK_GATEWAY_SECRET_KEY=
-TYK_DASH_ORG_ID=
+PLUGIN_TYK_GATEWAY_URL="http://127.0.0.1:8080"
+PLUGIN_TYK_GATEWAY_SECRET_KEY=
+PLUGIN_TYK_DASH_ORG_ID=
 
-# Auth0 Machine2Machine (Use for AWS API Gateway as well)
-AUTH0_M2M_DOMAIN=
-AUTH0_M2M_CLIENT_ID=
-AUTH0_M2M_CLIENT_SECRET=
-AUTH0_M2M_API_AUDIENCE="http://127.0.0.1:3030"
-AUTH0_M2M_API_SCOPE="create:client_credentials"
+# Auth0 Machine2Machine envvars
+PLUGIN_AUTH0_M2M_DOMAIN=
+PLUGIN_AUTH0_M2M_CLIENT_ID=
+PLUGIN_AUTH0_M2M_CLIENT_SECRET=
+PLUGIN_AUTH0_M2M_API_AUDIENCE="http://127.0.0.1:3030"
+PLUGIN_AUTH0_M2M_API_SCOPE="create:client_credentials"
 
 # JWT signing using private key
-JWT_ALGORITHM=HS256
-JWT_SECRET=
-JWT_USER_ID_FIELD="sub"
-JWT_COMPANY_ID_FIELD="customer_id"
-JWT_EXPIRES_IN=
+PLUGIN_JWT_ALGORITHM=HS256
+PLUGIN_JWT_SECRET=
+PLUGIN_JWT_USER_ID_FIELD="sub"
+PLUGIN_JWT_COMPANY_ID_FIELD="org_id"
+PLUGIN_JWT_EXPIRES_IN=
