--- a/plugins/tyk/package.json
+++ b/plugins/tyk/package.json
@@ -5,7 +5,5 @@
     "main": "tykProvisioningPlugin.js",
     "author": "",
     "license": " Apache-2.0",
-    "dependencies": {
-    }
+    "dependencies": {}
 }
-  
