separate out the Checkout for Custom vs stripe

--- a/my-dev-portal/.env.template
+++ b/my-dev-portal/.env.template
@@ -27,6 +27,7 @@ REACT_APP_OKTA_CLIENT_ID=
 # Billing Configuration #
 #########################
 
+REACT_APP_PAYMENT_PROVIDER=stripe
 # Stripe Publishable API Key
 REACT_APP_STRIPE_PUBLISHABLE_KEY=
 
