Improve key provisioning support.
- Test and verify sample Lambda token authorizer to work with both RS256 and HS256 signed JWTs.
- Generalize environment variable for JWKS URI.
- Add environment variable for `kid` property of JWTs.

--- a/my-dev-portal-api/.env.template
+++ b/my-dev-portal-api/.env.template
@@ -78,6 +78,7 @@ PLUGIN_AUTH0_M2M_API_SCOPE="create:client_credentials"
 # JWT signing using private key
 PLUGIN_JWT_ALGORITHM=HS256
 PLUGIN_JWT_SECRET=
+PLUGIN_JWT_KID=
 PLUGIN_JWT_USER_ID_FIELD="sub"
 PLUGIN_JWT_COMPANY_ID_FIELD="org_id"
 PLUGIN_JWT_EXPIRES_IN=
