--- a/distribution/docker/Dockerfile-dev-portal
+++ b/distribution/docker/Dockerfile-dev-portal
@@ -4,11 +4,15 @@ FROM node:18
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
+
 # Bundle app source
 COPY ./my-dev-portal /usr/src/app
-RUN npm install
-RUN npm run build
-RUN npm install -g serve
+
+# Remove env file
+RUN rm -f /usr/src/app/.env
+
+# Make entrypoint script executable.
+RUN chmod +x /usr/src/app/entrypoint.sh
 
 EXPOSE 4000
-CMD [ "serve", "-p", "4000", "-s", "build"]
+ENTRYPOINT ["./entrypoint.sh"]
