--- a/vite-front-end/package.json
+++ b/vite-front-end/package.json
@@ -18,10 +18,14 @@
     "@okta/okta-react": "^6.7.0",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.1",
+    "copy-to-clipboard": "^3.3.3",
     "lodash": "^4.17.21",
     "moesif-browser-js": "^1.8.13",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-inlinesvg": "^3.0.2",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
